--- a/app/views/categories/home.html.erb
+++ b/app/views/categories/home.html.erb
@@ -13,7 +13,7 @@
                             <div class="text-4xl me-4"><%= category.icon %></div>
                             <div class="text-lg font-semibold"><%= category.name %></div>
                           </div>
-                         <div class="text-lg font-semibold">$ <%= format_large_number(category.transactions.sum(:amount)) %></div>
+                         <%# <div class="text-lg font-semibold">$ <%= format_large_number(category.transactions.sum(:amount)) %></div> %>
 
 
                       </li>
